utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "enum": [
        "UnitValue"
      ],
      "type": "string"
    },
    {
      "properties": {
        "NamedFields": {
          "properties": {
            "id": {
              "type": "string"
            },
            "names": {
              "items": {
                "type": "string"
              },
              "type": [
                "array",
                "null"
              ]
            }
          },
          "required": [
            "id"
          ],
          "type": "object"
        }
      },
      "required": [
        "NamedFields"
      ],
      "type": "object"
    },
    {
      "properties": {
        "UnnamedFields": {
          "$ref": "#/components/schemas/Foo"
        }
      },
      "required": [
        "UnnamedFields"
      ],
      "type": "object"
    }
  ]
}
