utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_example.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "enum": [
        "UnitValue"
      ],
      "example": "EX: Unit",
      "type": "string"
    },
    {
      "example": "EX: Named",
      "properties": {
        "NamedFields": {
          "properties": {
            "id": {
              "example": "EX: Named id field",
              "type": "string"
            }
          },
          "required": [
            "id"
          ],
          "type": "object"
        }
      },
      "required": [
        "NamedFields"
      ],
      "type": "object"
    },
    {
      "example": "EX: Unnamed",
      "properties": {
        "UnnamedFields": {
          "$ref": "#/components/schemas/Foo"
        }
      },
      "required": [
        "UnnamedFields"
      ],
      "type": "object"
    }
  ]
}
