utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_rename_all.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "enum": [
        "unit_value"
      ],
      "type": "string"
    },
    {
      "properties": {
        "named_fields": {
          "properties": {
            "id": {
              "type": "string"
            },
            "names": {
              "items": {
                "type": "string"
              },
              "type": [
                "array",
                "null"
              ]
            }
          },
          "required": [
            "id"
          ],
          "type": "object"
        }
      },
      "required": [
        "named_fields"
      ],
      "type": "object"
    },
    {
      "properties": {
        "unnamed_fields": {
          "$ref": "#/components/schemas/Foo"
        }
      },
      "required": [
        "unnamed_fields"
      ],
      "type": "object"
    }
  ]
}
