utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_with_ref_serde_adjacently_tagged_named_fields.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "properties": {
        "content": {
          "properties": {
            "n": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "n"
          ],
          "type": "object"
        },
        "tag": {
          "enum": [
            "One"
          ],
          "type": "string"
        }
      },
      "required": [
        "content",
        "tag"
      ],
      "type": "object"
    },
    {
      "properties": {
        "content": {
          "properties": {
            "bar": {
              "$ref": "#/components/schemas/Bar"
            }
          },
          "required": [
            "bar"
          ],
          "type": "object"
        },
        "tag": {
          "enum": [
            "Two"
          ],
          "type": "string"
        }
      },
      "required": [
        "content",
        "tag"
      ],
      "type": "object"
    }
  ]
}
