utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_with_default_attr_field.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: owner
snapshot_kind: text
---
{
  "properties": {
    "authored": {
      "default": {
        "name": "My Book"
      },
      "oneOf": [
        {
          "$ref": "#/components/schemas/Book"
        },
        {
          "type": "null"
        }
      ]
    },
    "books": {
      "default": [
        {
          "name": "The Fellowship Of The Ring"
        }
      ],
      "items": {
        "$ref": "#/components/schemas/Book"
      },
      "type": "array"
    },
    "favorite_book": {
      "$ref": "#/components/schemas/Book",
      "default": {
        "name": "Dune"
      }
    },
    "leases": {
      "additionalProperties": {
        "$ref": "#/components/schemas/Book"
      },
      "default": {
        "National Library": {
          "name": "The Stranger"
        }
      },
      "propertyNames": {
        "type": "string"
      },
      "type": "object"
    }
  },
  "required": [
    "favorite_book",
    "books",
    "leases"
  ],
  "type": "object"
}
