utoipa-gen/tests/snapshots/schema_derive_test__new_type_struct_multiple_of.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "format": "int32",
  "multipleOf": 5,
  "type": "integer"
}
